[gd_scene load_steps=4 format=3 uid="uid://bp5uttecs152g"]

[ext_resource type="Script" uid="uid://dirls055s881j" path="res://src/scenes/ItemEditor/item_editor_option_button.gd" id="1_55a0d"]
[ext_resource type="Texture2D" uid="uid://cgjubft8k8u4n" path="res://assets/textures/ui_icons/trashcan.png" id="2_6xssd"]
[ext_resource type="Texture2D" uid="uid://c6l82vkbo5dyx" path="res://assets/textures/ui_icons/trashcanOpen.png" id="3_1sxnl"]

[node name="ItemEditor" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_55a0d")

[node name="ItemButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteSelf" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("2_6xssd")
texture_hover = ExtResource("3_1sxnl")

[connection signal="item_selected" from="ItemButton" to="." method="_on_item_button_item_selected"]
[connection signal="pressed" from="DeleteSelf" to="." method="_on_delete_self_pressed"]
